# legacy-backend

./: .coveragerc  .env.testing  .flake8  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  LICENSE  Pipfile  README.md  alembic.ini  app.py  config.py  config.yml  load-test-data.py  logging.yml  manage.py  mypy.ini  pyproject.toml  reset-db.sh  test.db  todo.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 24b98fa024b3_.py  3e870473b98b_.py  5b747c7d8a9f_.py  817ebd4c0189_.py  be6e5b8cbd58_.py
extensions/alembic-data/: setup.py
extensions/alembic-data/alembic_data/: __init__.py
extensions/alembic-data/alembic_data/ops/: __init__.py  add_object.py  delete_object.py  delete_row.py  insert_row.py  update_object.py  update_row.py
extensions/flask-rest/: setup.py
extensions/flask-rest/flask_rest/: __init__.py
flask_data/: __init__.py
flask_data/ops/: __init__.py  add_object.py  delete_object.py
karman/: __init__.py  api.py  auth.py  config.py  database.py  db.py  exceptions.py  logging.py  main.py  oauth.py  perms.py  scopes.py  security.py  settings.py  tus.py  versioning.py
karman/api/: app.py  v1.py
karman/app/: __init__.py  middleware.py
karman/cli/: user.py
karman/config/: __init__.py  config.py  embedded.py  helpers.py  settings.py  tusd.py  upload.py
karman/helpers/: config.py  crypto.py  listify.py  mongo.py
karman/main/: __init__.py  versioning.py
karman/models/: __init__.py  auth.py  base.py  database.py  imports.py  song.py  user.py
karman/resources/: auth.py  roles.py  user.py  users.py
karman/rest/: __init__.py
karman/rest/resource/: __init__.py  auth.py  base.py  songs.py  user.py
karman/rest/resources/: auth.py
karman/rest/schema/: __init__.py  auth.py  user.py
karman/routes/: auth.py  imports.py  info.py  oauth.py  roles.py  songs.py  users.py
karman/schemas/: __init__.py  auth.py  base.py  exception.py  imports.py  info.py  oauth.py  song.py  user.py  users.py
karman/util/: __init__.py  auth.py  exception.py  openapi.py  settings.py  versioning.py
karman/utils/: __init__.py  auth.py  callback.py  database.py  db.py  mongo.py  password.py  redis.py  upload.py  user.py
migrations/: env.py
migrations/versions/: 115645a3d3a2_.py  4795aa8b5e4c_add_user_model.py  91df67611d87_create_song_model.py  c28810138f4f_.py  ccac4bc6cb10_.py  dc94cd98f8f1_add_user_model.py  f735fcfc030b_.py
tasks/: import_test_data.py  migrate.py
tests/: conftest.py  data.py  fixtures.py  test_foo.py  test_oauth.py
tests/cli/: test_user_command.py
tests/oauth/: conftest.py  test_oauth.py
tests/resources/: test_roles.py
tests/rest_resources/: test_login.py  test_songs.py
tests/routes/: test_login.py  test_roles.py
