[tool.poetry]
name = "Karman"
version = "0.1.0"
description = "A management software for UltraStar karaoke files."
authors = ["Kim Wittenburg <codello@wittenburg.kim>"]
license = "MIT"

readme = "README.md"
repository = "https://github.com/Karaoke-Manager/backend"
# homepage = "..."
# documentation = "..."

keywords = ["fastapi", "asyncio", "ultrastar", "karaoke"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Framework :: AsyncIO"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Karaoke-Manager/backend/issues"

[tool.poe.tasks]
serve = { cmd = "uvicorn karman:app --reload", help = "Runs a development instance" }
test = { cmd = "pytest -n auto", help = "Run Tests" }
clean = { cmd = "rm -rf .mypy_cache .pytest_cache htmlcov coverage.xml .coverage", help = "Remove build and cache files" }
[tool.poe.tasks.lint]
sequence = [
    "flake8", # Runs black and isort as well
    "mypy"
]
default_item_type = "cmd"
help = "Checks the code style on the entire project."

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
files = ["karman", "tests"]
# TODO: Enable when https://github.com/samuelcolvin/pydantic/pull/3175 is merged
# plugins = ["pydantic.mypy"]
# Untyped definitions and calls
disallow_untyped_defs = true
# None and Optional handling
no_implicit_optional = true
# Configuring warnings
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
# Miscellaneous
warn_unused_configs = true

[tool.pydantic-mypy]
warn_untyped_fields = true

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.1"
fastapi-pagination = "^0.9.1"
# Uvicorn Optional Dependency
uvicorn = { version = "^0.16.0", optional = true, extras = ["standard"] }
# Pytest Optional Dependency
pytest = { version = "^6.2.5", optional = true }
pytest-cov = { version = "^3.0.0", optional = true }
pytest-xdist = { version = "^2.5.0", optional = true }
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
uvicorn = "^0.16.0"
black = "^21.12b0"
poethepoet = "^0.11.0"
isort = "^5.10.1"
mypy = "^0.920"
flake8 = "^4.0.1"
flake8-black = "^0.2.3"
flake8-isort = "^4.1.1"

[tool.poetry.extras]
uvicorn = ["uvicorn"]
tests = ["pytest", "pytest-cov", "pytest-xdist"]

[tool.poetry.build]
generate-setup-file = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
